--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	<body>
 		<h1>Travel to Costa Rica</h1>
 		<p>...and you'll get to see these beauties!</p>
-		<img src="letöltés.jpg" alt="Costa Rica" width="200">
+		<img src="https://github.com/redyxy/redyxy.github.io/blob/master/let%C3%B6lt%C3%A9s.jpg" alt="Costa Rica" width="200">
 	</body>
 </html>
