--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<title>Travel to Costa Rica</title>
 	</head>
 	<body>
-		<h1>Travel to Costa Rica</h1>
-		<p>...and you'll get to see these beauties!</p>
+		<h1>Utazás Costa Rica-ba!</h1>
+		<p>...így néz ki Costa Rica!</p>
 		<img src="https://github.com/redyxy/redyxy.github.io/blob/master/let%C3%B6lt%C3%A9s.jpg" alt="Costa Rica" width="200">
 	</body>
 </html>
