--- a/sbalazs.html
+++ b/sbalazs.html
@@ -17,9 +17,9 @@
 			<li><p>Az utóbbi időben nem olyan dolgokkal foglalkoztam amikre érdemes lenne időt szánni így ezen próbálok javítani.</p></li>
 		</ul>
 		<h2>További infót itt találhatsz rólam. </h2>
-			<p>Adatokért rólam katt <a href="file:///D:/SB%20suli/Magi%20G/adatok.html" target="_blank">ide</a>.</p>
-			<p>Hobbyaimért katt <a href="file:///D:/SB%20suli/Magi%20G/hobby.html" target="_blank">ide</a>.</p>
-			<p>Céljaimért katt <a href="file:///D:/SB%20suli/Magi%20G/celok.html" target="_blank">ide.</a></p>
-			<p>A napi rutinomért katt <a href="file:///D:/SB%20suli/Magi%20G/napirutin.html" target="_blank">ide.</a></p>
+			<p>Adatokért rólam katt <a href="https://redyxy.github.io/adatok.html" target="_blank">ide</a>.</p>
+			<p>Hobbyjaimért katt <a href="https://redyxy.github.io/hobby.html" target="_blank">ide</a>.</p>
+			<p>Céljaimért katt <a href="https://redyxy.github.io/celok.html" target="_blank">ide.</a></p>
+			<p>A napi rutinomért katt <a href="https://redyxy.github.io/napirutin.html" target="_blank">ide.</a></p>
 	</body>
 </html>
