--- a/adatok.html
+++ b/adatok.html
@@ -39,9 +39,9 @@
 			</tr>
 		</table>
 		<h2>További infót itt találhatsz rólam. </h2>
-			<p>A bevezetésért katt <a href="file:///D:/SB%20suli/Magi%20G/sbalazs.html" target="_blank">ide</a>.</p>
-			<p>Hobbyaimért katt <a href="file:///D:/SB%20suli/Magi%20G/hobby.html" target="_blank">ide</a>.</p>
-			<p>Céljaimért katt <a href="file:///D:/SB%20suli/Magi%20G/celok.html" target="_blank">ide.</a></p>
-			<p>A napi rutinomért katt <a href="file:///D:/SB%20suli/Magi%20G/napirutin.html" target="_blank">ide.</a></p>
+			<p>A bevezetésért katt <a href="https://redyxy.github.io/sbalazs.html" target="_blank">ide</a>.</p>
+			<p>Hobbijaimért katt <a href="https://redyxy.github.io/hobby.html" target="_blank">ide</a>.</p>
+			<p>Céljaimért katt <a href="https://redyxy.github.io/celok.html" target="_blank">ide.</a></p>
+			<p>A napi rutinomért katt <a href="https://redyxy.github.io/napirutin.html" target="_blank">ide.</a></p>
 	</body>
 </html>
