--- a/celok.html
+++ b/celok.html
@@ -13,16 +13,16 @@
 				<p>Japán (Tokyo) :</p>
 				<img src="tokyo.jpg" alt="image" height="200" width="355"></img>
 				<p>Amerika (California) :</p>
-				<img src="california.jpg" alt="image" height="200" width="355"></img>
+				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/california.jpg" alt="image" height="200" width="355"></img>
 			<li><p>Egyetemi végzettséget szerezni.</p></li>
 			<li><p>Minél jobb állást találni.</p></li>
 			<li><p>Jogosítványt szerezni.</p></li>
 			<li><p>Autót venni.</p></li>
 		</ul>
 		<h2>További infót itt találhatsz rólam. </h2>
-			<p>Adatokért rólam katt <a href="file:///D:/SB%20suli/Magi%20G/adatok.html" target="_blank">ide</a>.</p>
-			<p>Hobbyaimért katt <a href="file:///D:/SB%20suli/Magi%20G/hobby.html" target="_blank">ide</a>.</p>
-			<p>A bevezetésért katt <a href="file:///D:/SB%20suli/Magi%20G/sbalazs.html" target="_blank">ide.</a></p>
-			<p>A napi rutinomért katt <a href="file:///D:/SB%20suli/Magi%20G/napirutin.html" target="_blank">ide.</a></p>
+			<p>Adatokért rólam katt <a href="https://redyxy.github.io/adatok.html" target="_blank">ide</a>.</p>
+			<p>Hobbijaimért katt <a href="https://redyxy.github.io/hobby.html" target="_blank">ide</a>.</p>
+			<p>A bevezetésért katt <a href="https://redyxy.github.io/sbalazs.html" target="_blank">ide.</a></p>
+			<p>A napi rutinomért katt <a href="https://redyxy.github.io/napirutin.html" target="_blank">ide.</a></p>
 	</body>
 </html>
