--- a/hobby.html
+++ b/hobby.html
@@ -6,8 +6,8 @@
 		<meta charset="utf-8" />
 	</head>
 	<body bgcolor="yellow">
-		<h1>Sándor Balázs Hobbyai</h1>
-		<h2>Hobbyaim</h2>
+		<h1>Sándor Balázs Hobbijai</h1>
+		<h2>Hobbijaim</h2>
 		<ul>
 			<li><p><b>Sportolás:</b></p></li>
 				<p>Labdarúgás:</p>
@@ -23,9 +23,9 @@
 				<img src="lol.jpg" alt="image" height="200" width="355"></img>
 		</ul>
 		<h2>További infót itt találhatsz rólam. </h2>
-			<p>Céljaimért katt <a href="file:///D:/SB%20suli/Magi%20G/napirutin.html" target="_blank">ide.</a></p>
-			<p>Adatokért rólam katt <a href="file:///D:/SB%20suli/Magi%20G/adatok.html" target="_blank">ide</a>.</p>
-			<p>A bevezetésért katt <a href="file:///D:/SB%20suli/Magi%20G/sbalazs.html" target="_blank">ide</a>.</p>
-			<p>A napi rutinomért katt <a href="file:///D:/SB%20suli/Magi%20G/celok.html" target="_blank">ide.</a></p>
+			<p>Céljaimért katt <a href="https://redyxy.github.io/celok.html" target="_blank">ide.</a></p>
+			<p>Adatokért rólam katt <a href="https://redyxy.github.io/adatok.html" target="_blank">ide</a>.</p>
+			<p>A bevezetésért katt <a href="https://redyxy.github.io/sbalazs.html" target="_blank">ide</a>.</p>
+			<p>A napi rutinomért katt <a href="https://redyxy.github.io/napirutin.html" target="_blank">ide.</a></p>
 	</body>
 </html>
