--- a/hobby.html
+++ b/hobby.html
@@ -11,7 +11,7 @@
 		<ul>
 			<li><p><b>Sportolás:</b></p></li>
 				<p>Labdarúgás:</p>
-				<img src="foci.jpg" alt="image" height="200" width="355"></img>
+				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/foci.jpg" alt="image" height="200" width="355"></img>
 				<p>Kosárlabda:</p>
 				<img src="kosar.jpg" alt="image" height="200" width="355"></img>
 				<p>Röplabda:</p>
