--- a/hobby.html
+++ b/hobby.html
@@ -13,7 +13,7 @@
 				<p>Labdarúgás:</p>
 				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/foci.jpg" alt="image" height="200" width="355"></img>
 				<p>Kosárlabda:</p>
-				<img src="kosar.jpg" alt="image" height="200" width="355"></img>
+				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/kosar.jpg" alt="image" height="200" width="355"></img>
 				<p>Röplabda:</p>
 				<img src="ropi.jpg" alt="image" height="200" width="355"></img>
 			<li><p><b>Számítógépes játékkal való játszás.</b></p></li>
