--- a/hobby.html
+++ b/hobby.html
@@ -15,7 +15,7 @@
 				<p>Kosárlabda:</p>
 				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/kosar.jpg" alt="image" height="200" width="355"></img>
 				<p>Röplabda:</p>
-				<img src="ropi.jpg" alt="image" height="200" width="355"></img>
+				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/ropi.jpg" alt="image" height="200" width="355"></img>
 			<li><p><b>Számítógépes játékkal való játszás.</b></p></li>
 				<p>CS:GO:</p>
 				<img src="csgo.jpg" alt="image" height="200" width="355"></img>
