--- a/hobby.html
+++ b/hobby.html
@@ -20,7 +20,7 @@
 				<p>CS:GO:</p>
 				<img src="csgo.jpg" alt="image" height="200" width="355"></img>
 				<p>Leauge of Legends:</p>
-				<img src="lol.jpg" alt="image" height="200" width="355"></img>
+				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/lol.jpg" alt="image" height="200" width="355"></img>
 		</ul>
 		<h2>További infót itt találhatsz rólam. </h2>
 			<p>Céljaimért katt <a href="https://redyxy.github.io/celok.html" target="_blank">ide.</a></p>
