--- a/hobby.html
+++ b/hobby.html
@@ -18,7 +18,7 @@
 				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/ropi.jpg" alt="image" height="200" width="355"></img>
 			<li><p><b>Számítógépes játékkal való játszás.</b></p></li>
 				<p>CS:GO:</p>
-				<img src="csgo.jpg" alt="image" height="200" width="355"></img>
+				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/csgo.jpg" alt="image" height="200" width="355"></img>
 				<p>Leauge of Legends:</p>
 				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/lol.jpg" alt="image" height="200" width="355"></img>
 		</ul>
