--- a/sbalazs.html
+++ b/sbalazs.html
@@ -18,7 +18,7 @@
 		</ul>
 		<h2>További infót itt találhatsz rólam. </h2>
 			<p>Adatokért rólam katt <a href="https://redyxy.github.io/adatok.html" target="_blank">ide</a>.</p>
-			<p>Hobbyjaimért katt <a href="https://redyxy.github.io/hobby.html" target="_blank">ide</a>.</p>
+			<p>Hobbijaimért katt <a href="https://redyxy.github.io/hobby.html" target="_blank">ide</a>.</p>
 			<p>Céljaimért katt <a href="https://redyxy.github.io/celok.html" target="_blank">ide.</a></p>
 			<p>A napi rutinomért katt <a href="https://redyxy.github.io/napirutin.html" target="_blank">ide.</a></p>
 	</body>
