--- a/sbalazs.html
+++ b/sbalazs.html
@@ -12,7 +12,7 @@
 			<li><p>Sándor Balázs vagyok, 18 éves.</p></li>
 			<li><p>Jelenleg a Mechwartban tanulok.</p></li>
 			<li><p>Egyedül nem nagyon vagyok aktív, leginkább csak otthon pihenek ha van egy-két szabadabb napom.</p></li>
-			<li><p> Viszont jobban szeretek inkább társaságba lenni.</p></li>
+			<li><p> Viszont jobban szeretek inkább társaságban lenni.</p></li>
 			<li><p>Elég lusta vagyok általában viszont ha valami érdekel akkor nem hagyom addig abba amíg elégedett nem leszek az eredménnyel.</p></li>
 			<li><p>Az utóbbi időben nem olyan dolgokkal foglalkoztam amikre érdemes lenne időt szánni így ezen próbálok javítani.</p></li>
 		</ul>
