--- a/sbalazs.html
+++ b/sbalazs.html
@@ -13,8 +13,8 @@
 			<li><p>Jelenleg a Mechwartban tanulok.</p></li>
 			<li><p>Egyedül nem nagyon vagyok aktív, leginkább csak otthon pihenek ha van egy-két szabadabb napom.</p></li>
 			<li><p> Viszont jobban szeretek inkább társaságban lenni.</p></li>
-			<li><p>Elég lusta vagyok általában viszont ha valami érdekel akkor nem hagyom addig abba amíg elégedett nem leszek az eredménnyel.</p></li>
-			<li><p>Az utóbbi időben nem olyan dolgokkal foglalkoztam amikre érdemes lenne időt szánni így ezen próbálok javítani.</p></li>
+			<li><p>Elég lusta vagyok általában, viszont ha valami érdekel, akkor nem hagyom addig abba, amíg elégedett nem leszek az eredménnyel.</p></li>
+			<li><p>Az utóbbi időben nem olyan dolgokkal foglalkoztam, amikre érdemes lenne időt szánni, így ezen próbálok javítani.</p></li>
 		</ul>
 		<h2>További infót itt találhatsz rólam. </h2>
 			<p>Adatokért rólam katt <a href="https://redyxy.github.io/adatok.html" target="_blank">ide</a>.</p>
