--- a/celok.html
+++ b/celok.html
@@ -11,9 +11,9 @@
 		<ul>
 			<li><p><b>Eljutni minél több helyre (legfőképpen: Japánba,Amerikába) </b></p></li>
 				<p>Japán (Tokyo) :</p>
-				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/tokyo.jpg" alt="image" height="200" width="355"></img>
+				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/tokyo.jpg?raw=true" alt="image" height="200" width="355"></img>
 				<p>Amerika (California) :</p>
-				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/california.jpg" alt="image" height="200" width="355"></img>
+				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/california.jpg?raw=true" alt="image" height="200" width="355"></img>
 			<li><p>Egyetemi végzettséget szerezni.</p></li>
 			<li><p>Minél jobb állást találni.</p></li>
 			<li><p>Jogosítványt szerezni.</p></li>
