--- a/hobby.html
+++ b/hobby.html
@@ -11,16 +11,16 @@
 		<ul>
 			<li><p><b>Sportolás:</b></p></li>
 				<p>Labdarúgás:</p>
-				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/foci.jpg" alt="image" height="200" width="355"></img>
+				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/foci.jpg?raw=true" alt="image" height="200" width="355"></img>
 				<p>Kosárlabda:</p>
-				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/kosar.jpg" alt="image" height="200" width="355"></img>
+				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/kosar.jpg?raw=true" alt="image" height="200" width="355"></img>
 				<p>Röplabda:</p>
-				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/ropi.jpg" alt="image" height="200" width="355"></img>
+				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/ropi.jpg?raw=true" alt="image" height="200" width="355"></img>
 			<li><p><b>Számítógépes játékkal való játszás.</b></p></li>
 				<p>CS:GO:</p>
-				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/csgo.jpg" alt="image" height="200" width="355"></img>
+				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/csgo.jpg?raw=true" alt="image" height="200" width="355"></img>
 				<p>Leauge of Legends:</p>
-				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/lol.jpg" alt="image" height="200" width="355"></img>
+				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/lol.jpg?raw=true" alt="image" height="200" width="355"></img>
 		</ul>
 		<h2>További infót itt találhatsz rólam. </h2>
 			<p>Céljaimért katt <a href="https://redyxy.github.io/celok.html" target="_blank">ide.</a></p>
