--- a/napirutin.html
+++ b/napirutin.html
@@ -7,7 +7,7 @@
 	</head>
 	<body bgcolor="yellow">
 		<h1>Sándor Balázs napi rutinja</h1>
-		<h2>Napi rutinaom</h2>
+		<h2>Napi rutinom</h2>
 		<ol>
 			<li><p>Reggel 5:45-kor kelelk.</p></li>
 			<li><p>Indulás előtt fogat mosok, lefürdök, jobb esetben megreggelizek.</p></li>
