--- a/napirutin.html
+++ b/napirutin.html
@@ -11,10 +11,10 @@
 		<ol>
 			<li><p>Reggel 5:45-kor kelelk.</p></li>
 			<li><p>Indulás előtt fogat mosok, lefürdök, jobb esetben megreggelizek.</p></li>
-			<li><p>Hétfőn és kedden a 6:45-ös busszal, szerdán, csütörtökön, pénteken pedig a 7:15-ösel indulok. Általában 1 óra 20 perc az út.</p></li>
+			<li><p>Hétfőn és kedden a 6:45-ös busszal, szerdán, csütörtökön, pénteken pedig a 7:15-össel indulok. Általában 1 óra 20 perc az út.</p></li>
 			<li><p>8:30-14:10-ig iskolában vagyok.</p></li>
 			<li><p>A 14:30-as busszal megyek haza, ami 15:20-ra ér haza.</p></li>
-			<li><p>15:30-16:30-ig tanulok (Ha szükséges akkor többet.), "megebédelek".</p></li>
+			<li><p>15:30-16:30-ig tanulok (ha szükséges akkor többet), "megebédelek".</p></li>
 			<li><p>16:30-17:00-ig vásárolok.</p></li>
 			<li><p>17:00-21:00-ig pihenek, lefürdök, fogat mosok.</p></li>
 		</ol>
