--- a/celok.html
+++ b/celok.html
@@ -20,9 +20,9 @@
 			<li><p>Autót venni.</p></li>
 		</ul>
 		<h2>További infót itt találhatsz rólam. </h2>
-			<p>Adatokért rólam katt <a href="https://redyxy.github.io/adatok.html" target="_blank">ide</a>.</p>
-			<p>Hobbijaimért katt <a href="https://redyxy.github.io/hobby.html" target="_blank">ide</a>.</p>
-			<p>A bevezetésért katt <a href="https://redyxy.github.io/sbalazs.html" target="_blank">ide.</a></p>
-			<p>A napi rutinomért katt <a href="https://redyxy.github.io/napirutin.html" target="_blank">ide.</a></p>
+			<p>Adatokért rólam katt <a href="https://redyxy.github.io/adatok.html">ide</a>.</p>
+			<p>Hobbijaimért katt <a href="https://redyxy.github.io/hobby.html">ide</a>.</p>
+			<p>A bevezetésért katt <a href="https://redyxy.github.io/sbalazs.html">ide.</a></p>
+			<p>A napi rutinomért katt <a href="https://redyxy.github.io/napirutin.html">ide.</a></p>
 	</body>
 </html>
