--- a/hobby.html
+++ b/hobby.html
@@ -23,9 +23,9 @@
 				<img src="https://github.com/redyxy/redyxy.github.io/blob/master/lol.jpg?raw=true" alt="image" height="200" width="355"></img>
 		</ul>
 		<h2>További infót itt találhatsz rólam. </h2>
-			<p>Céljaimért katt <a href="https://redyxy.github.io/celok.html" target="_blank">ide.</a></p>
-			<p>Adatokért rólam katt <a href="https://redyxy.github.io/adatok.html" target="_blank">ide</a>.</p>
-			<p>A bevezetésért katt <a href="https://redyxy.github.io/sbalazs.html" target="_blank">ide</a>.</p>
-			<p>A napi rutinomért katt <a href="https://redyxy.github.io/napirutin.html" target="_blank">ide.</a></p>
+			<p>Céljaimért katt <a href="https://redyxy.github.io/celok.html">ide.</a></p>
+			<p>Adatokért rólam katt <a href="https://redyxy.github.io/adatok.html">ide</a>.</p>
+			<p>A bevezetésért katt <a href="https://redyxy.github.io/sbalazs.html">ide</a>.</p>
+			<p>A napi rutinomért katt <a href="https://redyxy.github.io/napirutin.html">ide.</a></p>
 	</body>
 </html>
