--- a/napirutin.html
+++ b/napirutin.html
@@ -19,9 +19,9 @@
 			<li><p>17:00-21:00-ig pihenek, lefürdök, fogat mosok.</p></li>
 		</ol>
 		<h2>További infót itt találhatsz rólam. </h2>
-			<p>Adatokért rólam katt <a href="https://redyxy.github.io/adatok.html" target="_blank">ide</a>.</p>
-			<p>Hobbyaimért katt <a href="https://redyxy.github.io/hobby.html" target="_blank">ide</a>.</p>
-			<p>Céljaimért katt <a href="https://redyxy.github.io/celok.html" target="_blank">ide.</a></p>
-			<p>A bevezetésért katt <a href="https://redyxy.github.io/sbalazs.html" target="_blank">ide.</a></p>
+			<p>Adatokért rólam katt <a href="https://redyxy.github.io/adatok.html">ide</a>.</p>
+			<p>Hobbyaimért katt <a href="https://redyxy.github.io/hobby.html">ide</a>.</p>
+			<p>Céljaimért katt <a href="https://redyxy.github.io/celok.html">ide.</a></p>
+			<p>A bevezetésért katt <a href="https://redyxy.github.io/sbalazs.html">ide.</a></p>
 	</body>
 </html>
