--- a/sbalazs.html
+++ b/sbalazs.html
@@ -21,5 +21,6 @@
 			<p>Hobbijaimért katt <a href="https://redyxy.github.io/hobby.html">ide</a>.</p>
 			<p>Céljaimért katt <a href="https://redyxy.github.io/celok.html">ide.</a></p>
 			<p>A napi rutinomért katt <a href="https://redyxy.github.io/napirutin.html">ide.</a></p>
+		<h2>ECDL Feladatok <a href="https://redyxy.github.io/ecdlfeladatok.html">itt</a></h2>
 	</body>
 </html>
