--- a/ecdlfeladatok.html
+++ b/ecdlfeladatok.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 	<h1>ECDL Feladatok</h1>
-	<p></h2><a href="https://redyxy.github.io/9feladat/index.html">9. feladat</a></h2></p>
+	<p><a href="https://redyxy.github.io/9feladat/index.html"><h2>9. feladat</h2></a></p>
 </body>
 </html>
