--- a/elso.html
+++ b/elso.html
@@ -21,8 +21,8 @@
 	<tbody>
 		<tr>
 			<td>Olasz</td>
-			<td><img src="okehely.png" alt="Kehely"></td>
-			<td><img src="oermek.png" alt="Érmék"></td>
+			<td><img src="okehely.png" alt="Kehely" id="Kehely"></td>
+			<td><img src="oermek.png" alt="Érmék" id="Érmék"></td>
 			<td><img src="opalcak.png" alt="Pálcák"></td>
 			<td><img src="okard.png" alt="Kard"></td>
 		</tr>
