--- a/elso.html
+++ b/elso.html
@@ -21,38 +21,38 @@
 	<tbody>
 		<tr>
 			<td>Olasz</td>
-			<td><img src="okehely.png" alt="Kehely" id="Kehely"></td>
-			<td><img src="oermek.png" alt="Érmék" id="Érmék"></td>
-			<td><img src="opalcak.png" alt="Pálcák"></td>
-			<td><img src="okard.png" alt="Kard"></td>
+			<td><img src="okehely.png" alt="Kehely" title="Kehely"></td>
+			<td><img src="oermek.png" alt="Érmék" title="Érmék"></td>
+			<td><img src="opalcak.png" alt="Pálcák" title="Pálcák"></td>
+			<td><img src="okard.png" alt="Kard" title="Kard"></td>
 		</tr>
 		<tr>
 			<td>Spanyol</td>
-			<td><img src="skehely.png" alt="Kehely"></td>
-			<td><img src="sermek.png" alt="Érmék"></td>
-			<td><img src="spalcak.png" alt="Pálcák"></td>
-			<td><img src="skard.png" alt="Kard"></td>
+			<td><img src="skehely.png" alt="Kehely" title="Kehely"></td>
+			<td><img src="sermek.png" alt="Érmék" title="Érmék"></td>
+			<td><img src="spalcak.png" alt="Pálcák" title="Pálcák"></td>
+			<td><img src="skard.png" alt="Kard" title="Kard"></td>
 		</tr>
 		<tr>
 			<td>Svájci-német</td>
-			<td><img src="srozsa.png" alt="Rózsa"></td>
-			<td><img src="scsengo.png" alt="Csengő"></td>
-			<td><img src="smakk.png" alt="Makk"></td>
-			<td><img src="spajzs.png" alt="Pajzs"></td>
+			<td><img src="srozsa.png" alt="Rózsa" title="Rózsa"></td>
+			<td><img src="scsengo.png" alt="Csengő" title="Csengő"></td>
+			<td><img src="smakk.png" alt="Makk" title="Makk"></td>
+			<td><img src="spajzs.png" alt="Pajzs" title="Pajzs"></td>
 		</tr>
 		<tr>
 			<td>Német/Magyar</td>
-			<td><img src="mpiros.png" alt="Piros"></td>
-			<td><img src="mtok.png" alt="Tök"></td>
-			<td><img src="mmakk.png" alt="Makk"></td>
-			<td><img src="mzold.png" alt="Zöld"></td>
+			<td><img src="mpiros.png" alt="Piros" title="Piros"></td>
+			<td><img src="mtok.png" alt="Tök" title="Tök"></td>
+			<td><img src="mmakk.png" alt="Makk" title="Makk"></td>
+			<td><img src="mzold.png" alt="Zöld" title="Zöld"></td>
 		</tr>
 		<tr>
 			<td>Francia</td>
-			<td><img src="fkor.png" alt="Kör"></td>
-			<td><img src="fkaro.png" alt="Káró"></td>
-			<td><img src="ftreff.png" alt="Treff"></td>
-			<td><img src="fpikk.png" alt="Pikk"></td>
+			<td><img src="fkor.png" alt="Kör" title="Kör"></td>
+			<td><img src="fkaro.png" alt="Káró" title="Káró"></td>
+			<td><img src="ftreff.png" alt="Treff" title="Treff"></td>
+			<td><img src="fpikk.png" alt="Pikk" title="Pikk"></td>
 		</tr>
 	</tbody>
 	</table>
