--- a/elso.html
+++ b/elso.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<div><h1>A francia kártya tulajdonságai</h1></div>
+		<div><h1 class="lathato">A francia kártya tulajdonságai</h1></div>
 	</header>
 	<div class="t">
 	<main>
