--- a/masodik.html
+++ b/masodik.html
@@ -21,8 +21,8 @@
 	<nav>
 	<ul>
 	<li><a href="elso.html">A francia kártya tulajdonságai</a></li>
-	<li><a href="kartyajatek1.html">Póker</a></li>
-	<li><a href="kartyajatek2.html">Francia kártyás játékok</a></li>
+	<li><a href="poker.html">Póker</a></li>
+	<li><a href="kartyajatek.html">Francia kártyás játékok</a></li>
 	</ul>
 	</nav>
 	</ul>
