--- a/elso.html
+++ b/elso.html
@@ -59,8 +59,8 @@
 	<nav>
 	<ul>
 	<li><a href="masodik.html">A francia kártya eredete</a></li>
-	<li><a href="kartyajatek.html">Póker</a></li>
-	<li><a href="poker.html">Francia kártyás játékok</a></li>
+	<li><a href="poker.html">Póker</a></li>
+	<li><a href="kartyajatek.html">Francia kártyás játékok</a></li>
 	</ul>
 	</nav>
 	</main>
