--- a/poker.html
+++ b/poker.html
@@ -59,7 +59,7 @@
 <ul>
 	<li><a href="kartyajatek2.html">Francia kártyás játékok</a></li>
 	<li><a href="masodik.html">A francia kártya eredete</a></li>
-	<li><a href="kartyajatek2.html">A francia kártya tulajdonságai</a></li>
+	<li><a href="elso.html">A francia kártya tulajdonságai</a></li>
 </ul>
 </main>
 </div>
