--- a/poker.html
+++ b/poker.html
@@ -57,7 +57,7 @@
 	</tr>
 </table>
 <ul>
-	<li><a href="kartyajatek2.html">Francia kártyás játékok</a></li>
+	<li><a href="kartyajatek.html">Francia kártyás játékok</a></li>
 	<li><a href="masodik.html">A francia kártya eredete</a></li>
 	<li><a href="elso.html">A francia kártya tulajdonságai</a></li>
 </ul>
