--- a/kartyajatek.html
+++ b/kartyajatek.html
@@ -59,7 +59,7 @@ Kötelező színre színt tenni, de nincs felülütési rendszer, ha nincs lapun
 </table>
 </main>
 <ul>
-	<li><a href="kartyajatek1.html">Póker</a></li>
+	<li><a href="poker.html">Póker</a></li>
 	<li><a href="masodik.html">A francia kártya eredete</a></li>
 	<li><a href="elso.html">A francia kártya tulajdonságai</a></li>
 </ul>
